logs/desktop.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/desktop'...
Compiling './lib/python3.5/site-packages/desktop/__init__.py'...
***   File "./lib/python3.5/site-packages/desktop/__init__.py", line 297
    raise OSError, "Desktop '%s' not supported (neither DESKTOP_LAUNCH nor os.startfile could be used)" % desktop_in_use
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/desktop/dialog.py'...
***   File "./lib/python3.5/site-packages/desktop/dialog.py", line 281
    raise OSError, "Desktop '%s' not supported (no known dialogue box command could be suggested)" % desktop_in_use
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/desktop/windows.py'...
***   File "./lib/python3.5/site-packages/desktop/windows.py", line 144
    raise OSError, "Window information from %r did not contain window details." % line
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/desktop-0.4.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
